src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --font-manrope: 'Manrope', ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
  --border-color: #EDEEEF;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-manrope);
  --font-mono: var(--font-geist-mono);
  --color-border: var(--border-color);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-manrope);
}

/* Optional utility to explicitly apply Manrope where needed */
.font-manrope {
  font-family: var(--font-manrope);
}

@media (min-width: 1150px) {
  .flex-row-1150 {
    flex-direction: row;
  }
}

